---
source: compiler-core/src/parse/tests.rs
expression: "\nrecord A {\n    A(String, Int)\n}\nconst a = A(\"a\", let)\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:5:18
  │
5 │ const a = A("a", let)
  │                  ^^^ I was not expecting this

Found the keyword `let`, expected one of: 
- `)`
- a constant record argument
